align-items fixed

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,8 @@ a:visited {
 	display: flex;
 	flex-direction: column;
 	flex-basis: 450px;
+	border-top-left-radius: 50px;
+	border-top-right-radius: 50px;
 }
 
 /* task 6 */
@@ -97,7 +99,7 @@ a:visited {
 
 	/* task 12 */
 	.pricing {
-		align-items: flex-start;
+		align-items: center;
 	}
 
 	.card {
